Bug 114580 - Bogus warning on if constexpr
Summary: Bogus warning on if constexpr
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 14.0
: P3 normal
Target Milestone: ---
Assignee: Jakub Jelinek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-04 10:02 UTC by Jakub Jelinek
Modified: 2024-04-23 06:45 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2024-04-04 00:00:00


Attachments
gcc14-pr114580.patch (1.02 KB, patch)
2024-04-04 10:31 UTC, Jakub Jelinek
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Jelinek 2024-04-04 10:02:04 UTC
#include <type_traits>

template <typename T>
void foo ()
{
  if constexpr ((T) std::is_constant_evaluated ())
    ;
}

void
bar ()
{
  foo <bool> ();
}

emits bogus warning with -std=c++17 -Wall.
Once it (incorrectly) warns about
warning: ‘std::is_constant_evaluated’ always evaluates to false in a non-‘constexpr’ function [-Wtautological-compare]
and once it correctly warns about
warning: ‘std::is_constant_evaluated’ always evaluates to true in ‘if constexpr’ [-Wtautological-compare]
on the same line.  In reality, std::is_constant_evaluated () here always evaluates to true, never to false.
Comment 1 Jakub Jelinek 2024-04-04 10:31:44 UTC
Created attachment 57873 [details]
gcc14-pr114580.patch

Untested fix.
Comment 2 GCC Commits 2024-04-09 07:32:28 UTC
The master branch has been updated by Jakub Jelinek <jakub@gcc.gnu.org>:

https://gcc.gnu.org/g:cfed80b9e4f562c99679739548df9369117dd791

commit r14-9861-gcfed80b9e4f562c99679739548df9369117dd791
Author: Jakub Jelinek <jakub@redhat.com>
Date:   Tue Apr 9 09:31:42 2024 +0200

    c++: Fix up maybe_warn_for_constant_evaluated calls [PR114580]
    
    When looking at maybe_warn_for_constant_evaluated for the trivial
    infinite loops patch, I've noticed that it can emit weird diagnostics
    for if constexpr in templates, first warn that std::is_constant_evaluted()
    always evaluates to false (because the function template is not constexpr)
    and then during instantiation warn that std::is_constant_evaluted()
    always evaluates to true (because it is used in if constexpr condition).
    Now, only the latter is actually true, even when the if constexpr
    is in a non-constexpr function, it will still always evaluate to true.
    
    So, the following patch fixes it to call maybe_warn_for_constant_evaluated
    always with IF_STMT_CONSTEXPR_P (if_stmt) as the second argument rather than
    true if it is if constexpr with non-dependent condition etc.
    
    2024-04-09  Jakub Jelinek  <jakub@redhat.com>
    
            PR c++/114580
            * semantics.cc (finish_if_stmt_cond): Call
            maybe_warn_for_constant_evaluated with IF_STMT_CONSTEXPR_P (if_stmt)
            as the second argument, rather than true/false depending on if
            it is if constexpr with non-dependent constant expression with
            bool type.
    
            * g++.dg/cpp2a/is-constant-evaluated15.C: New test.
Comment 3 Jakub Jelinek 2024-04-09 07:39:13 UTC
Fixed.
Comment 4 GCC Commits 2024-04-21 04:09:05 UTC
The releases/gcc-13 branch has been updated by Jakub Jelinek <jakub@gcc.gnu.org>:

https://gcc.gnu.org/g:ae3b6dea0445f9650cf1a684527efac06497f1b4

commit r13-8629-gae3b6dea0445f9650cf1a684527efac06497f1b4
Author: Jakub Jelinek <jakub@redhat.com>
Date:   Tue Apr 9 09:31:42 2024 +0200

    c++: Fix up maybe_warn_for_constant_evaluated calls [PR114580]
    
    When looking at maybe_warn_for_constant_evaluated for the trivial
    infinite loops patch, I've noticed that it can emit weird diagnostics
    for if constexpr in templates, first warn that std::is_constant_evaluted()
    always evaluates to false (because the function template is not constexpr)
    and then during instantiation warn that std::is_constant_evaluted()
    always evaluates to true (because it is used in if constexpr condition).
    Now, only the latter is actually true, even when the if constexpr
    is in a non-constexpr function, it will still always evaluate to true.
    
    So, the following patch fixes it to call maybe_warn_for_constant_evaluated
    always with IF_STMT_CONSTEXPR_P (if_stmt) as the second argument rather than
    true if it is if constexpr with non-dependent condition etc.
    
    2024-04-09  Jakub Jelinek  <jakub@redhat.com>
    
            PR c++/114580
            * semantics.cc (finish_if_stmt_cond): Call
            maybe_warn_for_constant_evaluated with IF_STMT_CONSTEXPR_P (if_stmt)
            as the second argument, rather than true/false depending on if
            it is if constexpr with non-dependent constant expression with
            bool type.
    
            * g++.dg/cpp2a/is-constant-evaluated15.C: New test.
    
    (cherry picked from commit cfed80b9e4f562c99679739548df9369117dd791)
Comment 5 Jakub Jelinek 2024-04-23 06:45:18 UTC
Fixed for 13.3 too.